--- a/quotation.html
+++ b/quotation.html
@@ -281,7 +281,7 @@
     
   <div class="label-row" id="cl-name">
   <span>Submitted To</span>
-  <span>: <span id="client-name"></span></span>
+  <span>: <span class="client-name"></span></span>
   </div>
     
   <div class="label-row" id="prod-house">
@@ -392,7 +392,7 @@
   <div style="display: flex; justify-content: space-between; margin-top: 1px !important;">
   <div style="text-align: center;">
     <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 1px !important;"></div>
-    <p style="text-align: left; margin-top: 2px !important;" id="client-name">Tenant Party</p>
+    <p style="text-align: left; margin-top: 2px !important;" class="client-name">Tenant Party</p>
   </div>
   <div style="text-align: center;">
     <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 1px !important;"></div>
