--- a/quotation.html
+++ b/quotation.html
@@ -220,6 +220,13 @@
        .button-group {
       display: none !important;
     }
+
+        .no-print {
+        display: none !important;
+      }
+       #signature-pad, .button-group {
+   display: none !important;
+    }
         
       .logo-header img {
       width: 150px;
