--- a/quotation.html
+++ b/quotation.html
@@ -382,7 +382,7 @@
 
   <div style="display: flex; justify-content: space-between; margin-top: 5px;">
   <p style="text-align: left;">Tenant Party</p>
-  <p style="text-align: right;">Jakarta, <strong id="quotation-date">September 13 2025</strong></p>
+  <p style="text-align: right;">Jakarta, <strong style="font-weight: normal !important;" id="quotation-date">September 13 2025</strong></p>
   </div>
     
   <div id="signature-container">
