--- a/equipmentrelease.html
+++ b/equipmentrelease.html
@@ -299,17 +299,11 @@
   
   <div class="header-line"></div>
   <p style="margin-top: 10px; margin-bottom: 0px; font-weight: bold; font-size: 15px; font-family: 'Nunito', sans-serif;">PT Warna Global Surya</p>
-  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold; font-family: 'Nunito', sans-serif;">Equipments</p>
+  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold; font-family: 'Nunito', sans-serif;">Equipments Release</p>
   
 
   <!-- Tabel Equipments -->
   <div id="equipment-section"></div>
-
-  <!-- Total Cost Equipments -->
-  <div class="label-rowsub">
-  <span style="margin-bottom: 20px;">Subtotal Equipments</span>
-  <span>: <span id="total-cost-orders"></span></span>
-</div>
  
     
  
