--- a/invoice.html
+++ b/invoice.html
@@ -53,10 +53,10 @@
     </div>
     <h1>INVOICE</h1> 
 
+    <div class="label-row"><span><span id="project-name" style="font-weight: bold;"></span></span></div>
     <div class="label-row" id="submit-to"><span>Submitted To</span><span>: <span id="client-name"></span></span></div>
     <div class="label-row" id="prod-house"><span>Production House/Company</span><span>: <span id="production-house"></span></span></div>
     <div class="label-row" id="comp-name"><span>Company</span><span>: <span id="company-name"></span></span></div>
-    <div class="label-row"><span>Project Name</span><span>: <span id="project-name"></span></span></div>
     <div class="label-row" id="invoice-number-row"><span>Invoice Number</span><span>: <span id="invoice-number"></span></span></div>
     <div class="label-row"><span>Invoice Date</span><span>: <span id="invoice-date"></span></span></div>
 
