--- a/quotation.html
+++ b/quotation.html
@@ -706,6 +706,9 @@ const canvas = document.getElementById("signature-pad");
     if (additionalDiscount === "") {
       document.getElementById("add-discount").style.display = "none";
     }
+    if (totalcostGo === "") {
+      document.getElementById("guard-table").style.display = "none";
+    }
 
   
   </script>
