--- a/quotation.html
+++ b/quotation.html
@@ -706,7 +706,7 @@ const canvas = document.getElementById("signature-pad");
     if (additionalDiscount === "") {
       document.getElementById("add-discount").style.display = "none";
     }
-    if (totalcostGo === "0") {
+    if (totalcostGo === "0 IDR") {
       document.getElementById("guard-table").style.display = "none";
     }
 
