--- a/quotation.html
+++ b/quotation.html
@@ -706,7 +706,7 @@ const canvas = document.getElementById("signature-pad");
     if (additionalDiscount === "") {
       document.getElementById("add-discount").style.display = "none";
     }
-    if (totalcostGo === "0 IDR") {
+    if (totalcostGO === "0 IDR") {
     document.getElementById("guard-table").style.display = "none"; // hilangkan tabel
     document.getElementById("sub-go").style.display = "none";       // hilangkan label subtotal
     }
