--- a/quotation.html
+++ b/quotation.html
@@ -406,6 +406,42 @@
     <p style="text-align: right; margin-top: 1px !important;" id="user-name">Rental Party</p>
   </div>
 
+  <div>
+    SYARAT DAN KETENTUAN:
+
+Penyewa wajib mengambil dan mengembalikan alat di WG Lighting Support and Grip
+
+Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam
+
+Penyewaan alat akan didampingi oleh Kru / Pengawal Alat
+
+Penyewa wajib menitipkan kartu identitas kepada pihak kami saat pengambilan alat
+
+Bila shooting diluar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapat akomodasi dan uang saku dari penyewa
+
+Jam kerja alat dari pukul 05:00 s/d 24:00
+6.1 Penjemputan atau pengambilan alat dan Kru teknisi / pengawal alat sebelum pukul 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari
+6.2 Pengembalian alat pukul 01:00 s/d 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari
+6.3 Pengembalian alat pukul 05:00 s/d 24:00 akan dikenakan biaya overtime 100% dari harga sewa 1 hari
+
+Jam kerja Kru teknisi / pengawal alat dan driver dari pukul 05:00 s/d 24:00. Untuk biaya overtime Kru dan Driver sebagai berikut:
+7.1 dari pukul 24:00 s/d 03:00 akan dikenakan biaya overtime 50% dari harga 1 hari kerja
+7.2 dari pukul 03:00 s/d 06:00 akan dikenakan biaya overtime 100% dari harga 1 hari kerja
+7.3 dari pukul 06:00 s/d 24:00 akan dikenakan biaya overtime 200% dari harga 1 hari kerja
+
+Penyewa bertanggung jawab terhadap Biaya Tol, Parkir dan BBM untuk transportasi dan generator. Ketentuan sebagai berikut:
+
+Penyewa bertanggung jawab sepenuhnya terhadap keamanan, kerusakan dan kehilangan alat di lokasi.
+9.1 Setiap kehilangan alat yang terjadi di lokasi akan menjadi tanggung jawab penyewa 100%
+9.2 Setiap kerusakan alat di lokasi akan menjadi tanggung jawab penyewa 100% dari biaya kerusakan, kecuali:
+9.2.1 Untuk biaya kerusakan pada lampu HMI (bohlam putus atau kaca lampu pecah) akan ditanggung 50% oleh Penyewa
+9.2.2 Untuk biaya kerusakan pada alat yang di ASURANSI pada saat di sewa akan ditanggung 25% oleh Penyewa
+
+Pemberitahuan pembatalan harus 1x24 jam sebelum shooting, jika tidak akan dikenakan biaya 50% dari harga sewa 1 hari
+
+Apabila quotation ini disetujui harap di konfirmasi melalui email atau telepon ke +62 818 994 196
+  </div>
+    
   </div>
 
  
