Update terms and conditions in quotation.html

--- a/quotation.html
+++ b/quotation.html
@@ -406,41 +406,54 @@
     <p style="text-align: right; margin-top: 1px !important;" id="user-name">Rental Party</p>
   </div>
 
-  <div>
-    SYARAT DAN KETENTUAN:
+ <div class="terms-conditions">
+  <h3>SYARAT DAN KETENTUAN</h3>
 
-Penyewa wajib mengambil dan mengembalikan alat di WG Lighting Support and Grip
+  <p><strong>1.</strong> Penyewa wajib mengambil dan mengembalikan alat di WGS (Warna Global Surya)</p>
 
-Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam
+  <p><strong>2.</strong> Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam.</p>
 
-Penyewaan alat akan didampingi oleh Kru / Pengawal Alat
+  <p><strong>3.</strong> Penyewaan alat akan didampingi oleh Kru / Pengawal Alat.</p>
 
-Penyewa wajib menitipkan kartu identitas kepada pihak kami saat pengambilan alat
+  <p><strong>4.</strong> Penyewa wajib menitipkan kartu identitas kepada pihak kami saat pengambilan alat.</p>
 
-Bila shooting diluar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapat akomodasi dan uang saku dari penyewa
+  <p><strong>5.</strong> <strong>Bila shooting di luar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapatkan akomodasi dan uang saku dari penyewa.</strong></p>
 
-Jam kerja alat dari pukul 05:00 s/d 24:00
-6.1 Penjemputan atau pengambilan alat dan Kru teknisi / pengawal alat sebelum pukul 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari
-6.2 Pengembalian alat pukul 01:00 s/d 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari
-6.3 Pengembalian alat pukul 05:00 s/d 24:00 akan dikenakan biaya overtime 100% dari harga sewa 1 hari
+  <p><strong>6.</strong> Jam kerja alat dari pukul 05:00 s/d 24:00.</p>
 
-Jam kerja Kru teknisi / pengawal alat dan driver dari pukul 05:00 s/d 24:00. Untuk biaya overtime Kru dan Driver sebagai berikut:
-7.1 dari pukul 24:00 s/d 03:00 akan dikenakan biaya overtime 50% dari harga 1 hari kerja
-7.2 dari pukul 03:00 s/d 06:00 akan dikenakan biaya overtime 100% dari harga 1 hari kerja
-7.3 dari pukul 06:00 s/d 24:00 akan dikenakan biaya overtime 200% dari harga 1 hari kerja
-
-Penyewa bertanggung jawab terhadap Biaya Tol, Parkir dan BBM untuk transportasi dan generator. Ketentuan sebagai berikut:
-
-Penyewa bertanggung jawab sepenuhnya terhadap keamanan, kerusakan dan kehilangan alat di lokasi.
-9.1 Setiap kehilangan alat yang terjadi di lokasi akan menjadi tanggung jawab penyewa 100%
-9.2 Setiap kerusakan alat di lokasi akan menjadi tanggung jawab penyewa 100% dari biaya kerusakan, kecuali:
-9.2.1 Untuk biaya kerusakan pada lampu HMI (bohlam putus atau kaca lampu pecah) akan ditanggung 50% oleh Penyewa
-9.2.2 Untuk biaya kerusakan pada alat yang di ASURANSI pada saat di sewa akan ditanggung 25% oleh Penyewa
-
-Pemberitahuan pembatalan harus 1x24 jam sebelum shooting, jika tidak akan dikenakan biaya 50% dari harga sewa 1 hari
-
-Apabila quotation ini disetujui harap di konfirmasi melalui email atau telepon ke +62 818 994 196
+  <div class="sub-point">
+    <p><strong>6.1</strong> Penjemputan atau pengambilan alat dan Kru teknisi / pengawal alat sebelum pukul 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari.</p>
+    <p><strong>6.2</strong> Pengembalian alat pukul 01:00 s/d 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari.</p>
+    <p><strong>6.3</strong> Pengembalian alat pukul 05:00 s/d 24:00 akan dikenakan biaya overtime 100% dari harga sewa 1 hari.</p>
   </div>
+
+  <p><strong>7.</strong> Jam kerja Kru teknisi / pengawal alat dan driver dari pukul 05:00 s/d 24:00. Biaya overtime sebagai berikut:</p>
+
+  <div class="sub-point">
+    <p><strong>7.1</strong> Pukul 24:00 s/d 03:00 dikenakan biaya overtime 50% dari harga 1 hari kerja.</p>
+    <p><strong>7.2</strong> Pukul 03:00 s/d 06:00 dikenakan biaya overtime 100% dari harga 1 hari kerja.</p>
+    <p><strong>7.3</strong> Pukul 06:00 s/d 24:00 dikenakan biaya overtime 200% dari harga 1 hari kerja.</p>
+  </div>
+
+  <p><strong>8.</strong> <strong>Penyewa bertanggung jawab terhadap biaya Tol, Parkir, dan BBM untuk transportasi dan generator.</strong></p>
+
+  <p><strong>9.</strong> Penyewa bertanggung jawab sepenuhnya terhadap keamanan, kerusakan, dan kehilangan alat di lokasi.</p>
+
+  <div class="sub-point">
+    <p><strong>9.1</strong> Setiap kehilangan alat di lokasi menjadi tanggung jawab penyewa 100%.</p>
+    <p><strong>9.2</strong> Setiap kerusakan alat di lokasi menjadi tanggung jawab penyewa 100% dari biaya kerusakan, kecuali:</p>
+
+    <div class="sub-point">
+      <p><strong>9.2.1</strong> Kerusakan lampu HMI (bohlam putus atau kaca pecah) ditanggung 50% oleh penyewa.</p>
+      <p><strong>9.2.2</strong> Kerusakan alat yang diasuransikan saat disewa ditanggung 25% oleh penyewa.</p>
+    </div>
+  </div>
+
+  <p><strong>12.</strong> Pemberitahuan pembatalan harus dilakukan 1x24 jam sebelum shooting. Jika tidak, akan dikenakan biaya 50% dari harga sewa 1 hari.</p>
+
+  <p><strong>13.</strong> Apabila quotation ini disetujui, harap dikonfirmasi melalui email atau telepon ke <strong>+62 818 994 196</strong>.</p>
+</div>
+
     
   </div>
 
