--- a/quotation.html
+++ b/quotation.html
@@ -406,10 +406,12 @@
     <p style="text-align: right; margin-top: 1px !important;" id="user-name">Rental Party</p>
   </div>
 
- <div class="terms-conditions">
-  <h3>SYARAT DAN KETENTUAN</h3>
+  </div>
 
-  <p><strong>1.</strong> Penyewa wajib mengambil dan mengembalikan alat di WGS (Warna Global Surya)</p>
+ <div class="terms-conditions">
+  <h3 style="margin-top: 30px;">SYARAT DAN KETENTUAN</h3>
+
+  <p><strong>1.</strong> Penyewa wajib mengambil dan mengembalikan alat di WGS (Warna Global Surya).</p>
 
   <p><strong>2.</strong> Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam.</p>
 
@@ -417,47 +419,48 @@
 
   <p><strong>4.</strong> Penyewa wajib menitipkan kartu identitas kepada pihak kami saat pengambilan alat.</p>
 
-  <p><strong>5.</strong> <strong>Bila shooting di luar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapatkan akomodasi dan uang saku dari penyewa.</strong></p>
+  <p><strong>5.</strong>
+    <strong>Bila shooting di luar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapatkan akomodasi dan uang saku dari penyewa.</strong>
+  </p>
 
   <p><strong>6.</strong> Jam kerja alat dari pukul 05:00 s/d 24:00.</p>
 
   <div class="sub-point">
-    <p><strong>6.1</strong> Penjemputan atau pengambilan alat dan Kru teknisi / pengawal alat sebelum pukul 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari.</p>
-    <p><strong>6.2</strong> Pengembalian alat pukul 01:00 s/d 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari.</p>
-    <p><strong>6.3</strong> Pengembalian alat pukul 05:00 s/d 24:00 akan dikenakan biaya overtime 100% dari harga sewa 1 hari.</p>
+    <p><strong>6.1</strong> Penjemputan atau pengambilan alat dan kru sebelum pukul 04:00 dikenakan overtime 50% dari harga sewa 1 hari.</p>
+    <p><strong>6.2</strong> Pengembalian alat pukul 01:00 s/d 04:00 dikenakan overtime 50% dari harga sewa 1 hari.</p>
+    <p><strong>6.3</strong> Pengembalian alat pukul 05:00 s/d 24:00 dikenakan overtime 100% dari harga sewa 1 hari.</p>
   </div>
 
-  <p><strong>7.</strong> Jam kerja Kru teknisi / pengawal alat dan driver dari pukul 05:00 s/d 24:00. Biaya overtime sebagai berikut:</p>
+  <p><strong>7.</strong> Jam kerja Kru teknisi / pengawal alat dan driver pukul 05:00 s/d 24:00. Ketentuan overtime:</p>
 
   <div class="sub-point">
-    <p><strong>7.1</strong> Pukul 24:00 s/d 03:00 dikenakan biaya overtime 50% dari harga 1 hari kerja.</p>
-    <p><strong>7.2</strong> Pukul 03:00 s/d 06:00 dikenakan biaya overtime 100% dari harga 1 hari kerja.</p>
-    <p><strong>7.3</strong> Pukul 06:00 s/d 24:00 dikenakan biaya overtime 200% dari harga 1 hari kerja.</p>
+    <p><strong>7.1</strong> Pukul 24:00 s/d 03:00 dikenakan overtime 50% dari harga 1 hari kerja.</p>
+    <p><strong>7.2</strong> Pukul 03:00 s/d 06:00 dikenakan overtime 100% dari harga 1 hari kerja.</p>
+    <p><strong>7.3</strong> Pukul 06:00 s/d 24:00 dikenakan overtime 200% dari harga 1 hari kerja.</p>
   </div>
 
-  <p><strong>8.</strong> <strong>Penyewa bertanggung jawab terhadap biaya Tol, Parkir, dan BBM untuk transportasi dan generator.</strong></p>
+  <p><strong>8.</strong>
+    <strong>Penyewa bertanggung jawab atas biaya Tol, Parkir, dan BBM untuk transportasi dan generator.</strong>
+  </p>
 
-  <p><strong>9.</strong> Penyewa bertanggung jawab sepenuhnya terhadap keamanan, kerusakan, dan kehilangan alat di lokasi.</p>
+  <p><strong>9.</strong> Penyewa bertanggung jawab penuh atas keamanan, kerusakan, dan kehilangan alat di lokasi.</p>
 
   <div class="sub-point">
-    <p><strong>9.1</strong> Setiap kehilangan alat di lokasi menjadi tanggung jawab penyewa 100%.</p>
-    <p><strong>9.2</strong> Setiap kerusakan alat di lokasi menjadi tanggung jawab penyewa 100% dari biaya kerusakan, kecuali:</p>
+    <p><strong>9.1</strong> Kehilangan alat di lokasi menjadi tanggung jawab penyewa 100%.</p>
+    <p><strong>9.2</strong> Kerusakan alat di lokasi menjadi tanggung jawab penyewa 100%, kecuali:</p>
 
     <div class="sub-point">
-      <p><strong>9.2.1</strong> Kerusakan lampu HMI (bohlam putus atau kaca pecah) ditanggung 50% oleh penyewa.</p>
+      <p><strong>9.2.1</strong> Kerusakan lampu HMI (bohlam putus/kaca pecah) ditanggung 50% oleh penyewa.</p>
       <p><strong>9.2.2</strong> Kerusakan alat yang diasuransikan saat disewa ditanggung 25% oleh penyewa.</p>
     </div>
   </div>
 
-  <p><strong>12.</strong> Pemberitahuan pembatalan harus dilakukan 1x24 jam sebelum shooting. Jika tidak, akan dikenakan biaya 50% dari harga sewa 1 hari.</p>
+  <p><strong>12.</strong> Pembatalan harus diberitahukan minimal 1x24 jam sebelum shooting. Jika tidak, dikenakan biaya 50% dari harga sewa 1 hari.</p>
 
-  <p><strong>13.</strong> Apabila quotation ini disetujui, harap dikonfirmasi melalui email atau telepon ke <strong>+62 818 994 196</strong>.</p>
+  <p><strong>13.</strong> Persetujuan quotation dapat dikonfirmasi melalui email atau telepon ke <strong>+62 818 994 196</strong>.</p>
 </div>
 
-    
   </div>
-
- 
  
   
   <script>
