--- a/quotation.html
+++ b/quotation.html
@@ -62,6 +62,29 @@
       color: white;
     }
 
+.terms {
+  font-size: 12px;
+  line-height: 1.4;
+}
+
+.terms p {
+  margin: 4px 0;
+}
+
+.terms ol {
+  margin: 4px 0 4px 16px;
+  padding: 0;
+}
+
+.terms li {
+  margin: 2px 0;
+}
+
+.terms ol ol {
+  margin-left: 16px;
+}
+
+
     .button-group {
       margin-top: 10px;
     }
@@ -408,56 +431,67 @@
 
   </div>
 
- <div class="terms-conditions">
-  <h3 style="margin-top: 30px;">SYARAT DAN KETENTUAN</h3>
+<div class="terms">
+  <p><strong>SYARAT DAN KETENTUAN:</strong></p>
 
-  <p><strong>1.</strong> Penyewa wajib mengambil dan mengembalikan alat di WGS (Warna Global Surya).</p>
+  <ol>
+    <li>Penyewa wajib mengambil dan mengembalikan alat di WG Lighting Support and Grip.</li>
 
-  <p><strong>2.</strong> Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam.</p>
+    <li>Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam.</li>
 
-  <p><strong>3.</strong> Penyewaan alat akan didampingi oleh Kru / Pengawal Alat.</p>
+    <li>Penyewaan alat akan didampingi oleh Kru / Pengawal Alat.</li>
 
-  <p><strong>4.</strong> Penyewa wajib menitipkan kartu identitas kepada pihak kami saat pengambilan alat.</p>
+    <li>Penyewa wajib menitipkan kartu identitas kepada pihak kami saat pengambilan alat.</li>
 
-  <p><strong>5.</strong>
-    <strong>Bila shooting di luar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapatkan akomodasi dan uang saku dari penyewa.</strong>
-  </p>
+    <li>
+      Bila shooting diluar wilayah JABODETABEK atau menginap, Kru teknisi / pengawal alat dan driver berhak mendapat akomodasi dan uang saku dari penyewa.
+    </li>
 
-  <p><strong>6.</strong> Jam kerja alat dari pukul 05:00 s/d 24:00.</p>
+    <li>
+      Jam kerja alat dari pukul 05:00 s/d 24:00
+      <ol>
+        <li>Penjemputan atau pengambilan alat dan Kru teknisi / pengawal alat sebelum pukul 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari.</li>
+        <li>Pengembalian alat pukul 01:00 s/d 04:00 akan dikenakan biaya overtime 50% dari harga sewa 1 hari.</li>
+        <li>Pengembalian alat pukul 05:00 s/d 24:00 akan dikenakan biaya overtime 100% dari harga sewa 1 hari.</li>
+      </ol>
+    </li>
 
-  <div class="sub-point">
-    <p><strong>6.1</strong> Penjemputan atau pengambilan alat dan kru sebelum pukul 04:00 dikenakan overtime 50% dari harga sewa 1 hari.</p>
-    <p><strong>6.2</strong> Pengembalian alat pukul 01:00 s/d 04:00 dikenakan overtime 50% dari harga sewa 1 hari.</p>
-    <p><strong>6.3</strong> Pengembalian alat pukul 05:00 s/d 24:00 dikenakan overtime 100% dari harga sewa 1 hari.</p>
-  </div>
+    <li>
+      Jam kerja Kru teknisi / pengawal alat dan driver dari pukul 05:00 s/d 24:00. Untuk biaya overtime Kru dan Driver sebagai berikut:
+      <ol>
+        <li>Dari pukul 24:00 s/d 03:00 akan dikenakan biaya overtime 50% dari harga 1 hari kerja.</li>
+        <li>Dari pukul 03:00 s/d 06:00 akan dikenakan biaya overtime 100% dari harga 1 hari kerja.</li>
+        <li>Dari pukul 06:00 s/d 24:00 akan dikenakan biaya overtime 200% dari harga 1 hari kerja.</li>
+      </ol>
+    </li>
 
-  <p><strong>7.</strong> Jam kerja Kru teknisi / pengawal alat dan driver pukul 05:00 s/d 24:00. Ketentuan overtime:</p>
+    <li>
+      Penyewa bertanggung jawab terhadap Biaya Tol, Parkir dan BBM untuk transportasi dan generator.
+    </li>
 
-  <div class="sub-point">
-    <p><strong>7.1</strong> Pukul 24:00 s/d 03:00 dikenakan overtime 50% dari harga 1 hari kerja.</p>
-    <p><strong>7.2</strong> Pukul 03:00 s/d 06:00 dikenakan overtime 100% dari harga 1 hari kerja.</p>
-    <p><strong>7.3</strong> Pukul 06:00 s/d 24:00 dikenakan overtime 200% dari harga 1 hari kerja.</p>
-  </div>
+    <li>
+      Penyewa bertanggung jawab sepenuhnya terhadap keamanan, kerusakan dan kehilangan alat di lokasi.
+      <ol>
+        <li>Setiap kehilangan alat yang terjadi di lokasi akan menjadi tanggung jawab penyewa 100%.</li>
+        <li>
+          Setiap kerusakan alat di lokasi akan menjadi tanggung jawab penyewa 100% dari biaya kerusakan, kecuali:
+          <ol>
+            <li>Untuk biaya kerusakan pada lampu HMI (bohlam putus atau kaca lampu pecah) akan ditanggung 50% oleh Penyewa.</li>
+            <li>Untuk biaya kerusakan pada alat yang di ASURANSI pada saat di sewa akan ditanggung 25% oleh Penyewa.</li>
+          </ol>
+        </li>
+      </ol>
+    </li>
 
-  <p><strong>8.</strong>
-    <strong>Penyewa bertanggung jawab atas biaya Tol, Parkir, dan BBM untuk transportasi dan generator.</strong>
-  </p>
+    <li>
+      Pemberitahuan pembatalan harus 1x24 jam sebelum shooting, jika tidak akan dikenakan biaya 50% dari harga sewa 1 hari.
+    </li>
 
-  <p><strong>9.</strong> Penyewa bertanggung jawab penuh atas keamanan, kerusakan, dan kehilangan alat di lokasi.</p>
+    <li>
+      Apabila quotation ini disetujui harap di konfirmasi melalui email atau telepon ke +62 818 994 196.
+    </li>
+  </ol>
 
-  <div class="sub-point">
-    <p><strong>9.1</strong> Kehilangan alat di lokasi menjadi tanggung jawab penyewa 100%.</p>
-    <p><strong>9.2</strong> Kerusakan alat di lokasi menjadi tanggung jawab penyewa 100%, kecuali:</p>
-
-    <div class="sub-point">
-      <p><strong>9.2.1</strong> Kerusakan lampu HMI (bohlam putus/kaca pecah) ditanggung 50% oleh penyewa.</p>
-      <p><strong>9.2.2</strong> Kerusakan alat yang diasuransikan saat disewa ditanggung 25% oleh penyewa.</p>
-    </div>
-  </div>
-
-  <p><strong>12.</strong> Pembatalan harus diberitahukan minimal 1x24 jam sebelum shooting. Jika tidak, dikenakan biaya 50% dari harga sewa 1 hari.</p>
-
-  <p><strong>13.</strong> Persetujuan quotation dapat dikonfirmasi melalui email atau telepon ke <strong>+62 818 994 196</strong>.</p>
 </div>
 
   </div>
