--- a/quotation.html
+++ b/quotation.html
@@ -435,7 +435,7 @@
   <p><strong>SYARAT DAN KETENTUAN:</strong></p>
 
   <ol>
-    <li>Penyewa wajib mengambil dan mengembalikan alat di WG Lighting Support and Grip.</li>
+    <li>Penyewa wajib mengambil dan mengembalikan alat di WGS (Warna Global Surya) Lighting and Grip Support.</li>
 
     <li>Penyewa wajib memberitahukan waktu pengambilan alat dan lokasi shooting dalam waktu 1x24 jam.</li>
 
